2016-03-03  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Get rid of unused variable.

	* src/thrend/thrend.c (tis620_0_shape_table_):
	  - Comment out unused variable reported by GCC 6.

2016-01-28  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Make source more readable.

	* src/thbrk/brk-common.c (brk_get_dict):
	  - Break assignment and comparison chain on reading
	    LIBTHAI_DICTDIR environment.

2016-01-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix compilation error with GCC 6

	* include/thai/thctype.h (_th_bitmsk):
	  - Use unsigned int instead of unsigned short for bitmask base,
	    as GCC 6 takes ~0 as -1 for unsigned short,
	    and causes compilation error for scim-thai.

	Thanks Martin Michlmayr for the report via Debian #811690
	http://bugs.debian.org/811690

2016-01-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac: Post-release version suffix added.

2015-11-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac:
	  - Bump library revision to reflect code changes.

	* configure.ac, NEWS:
	=== Version 0.1.24 ===

2015-11-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update word break dictionary.

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt: Add words.

2015-11-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix infinite loop introduced by recent optimization.

	* src/thbrk/brk-maximal.c (brk_recover_try):
	  - Update 'pool' correctly when deleting matched BrkPool node.
	    brk_pool_delete_node() cannot be started at pool_tail indeed.

	Thanks Zack Weinberg for the report via Debian #805703
	http://bugs.debian.org/805703

2015-11-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac: Post-release version suffix added.

2015-10-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac:
	  - Bump library revision to reflect code changes.

	* configure.ac, NEWS:
	=== Version 0.1.23 ===
